# LiveObjects_SDK_for_Linux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
config-template/: liveobjects_dev_config.h  liveobjects_dev_params.h  liveobjects_dev_security.h
core/: CMakeLists.txt  core.c
examples/: README.md
examples/liveobjects_sample_amb_dist/: CMakeLists.txt  README.md  amb_dist.c
examples/liveobjects_sample_amb_dist/config/: liveobjects_dev_config.h  liveobjects_dev_security.h
examples/liveobjects_sample_basic/: CMakeLists.txt  basic.c
examples/liveobjects_sample_basic/config/: liveobjects_dev_params.h  liveobjects_dev_security.h
examples/liveobjects_sample_minimal/: CMakeLists.txt  README.md  minimal.c
examples/liveobjects_sample_minimal/config/: liveobjects_dev_params.h  liveobjects_dev_security.h
examples/liveobjects_sample_update/: CMakeLists.txt  update.c
examples/liveobjects_sample_update/config/: liveobjects_dev_config.h  liveobjects_dev_params.h  liveobjects_dev_security.h
lib/vl6180/include/: vl6180_pi.h
lib/vl6180/src/: vl6180_pi.c
mqtt_live_objects/: liveobjects_iotsoftbox_api.h
python_wrapper_example/: minimal.py
